added video audio disable enable and laeving and chat opton

--- a/src/css/client.css
+++ b/src/css/client.css
@@ -78,6 +78,7 @@ form button:focus {
     height: 97%;
     border: 10px solid darkred;
     border-radius: 10px !important;
+    position: relative;
 }
 
 .side_frame .call_window form {
